# xv6-riscv-rust

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  fs.img  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: rust.yml
docs/: Debugging.md  Difference.md
include/: fs.h  sleeplock.h
mkfs/: mkfs.c
src/: kernel.ld  lib.rs  main.rs  plic.rs  printf.rs  proc.rs  rmain.rs  sleeplock.rs  spinlock.rs  start.rs  string.rs  trap.rs
src/asm/: entry.S  init.c  kernelvec.S  swtch.S  syscall.h  trampoline.S
src/console/: mod.rs  uart.rs
src/consts/: driver.rs  fs.rs  memlayout.rs  mod.rs  param.rs  riscv.rs
src/driver/: console.rs  mod.rs  uart.rs  virtio.rs  virtio_disk.rs
src/fs/: bio.rs  bitmap.rs  block.rs  dir.rs  file.rs  inode.rs  log.rs  mod.rs  superblock.rs
src/fs/file/: mod.rs  pipe.rs
src/ld/: kernel.ld
src/mm/: addr.rs  boxed.rs  kalloc.rs  kvm.rs  list.rs  mod.rs  pagetable.rs  uvm.rs
src/process/: context.rs  cpu.rs  elf.rs  mod.rs  proc.rs  syscall.rs  trapframe.rs
src/process/proc/: elf.rs  mod.rs  syscall.rs
src/register/: clint.rs  mepc.rs  mie.rs  mod.rs  mstatus.rs  satp.rs  scause.rs  sie.rs  sip.rs  sstatus.rs
user/: cat.c  echo.c  forktest.c  grep.c  grind.c  init.c  kill.c  ln.c  ls.c  mkdir.c  printf.c  rm.c  sh.c  stressfs.c  ulib.c  umalloc.c  usertests.c  usys.pl  wc.c  zombie.c
