[package]
name = "xv6-riscv-rust"
version = "0.1.0"
authors = ["Jaic1 <506933131@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.0"
linked_list_allocator = "0.8.1"

[features]
unit_test = []