[package]
name = "xv6-riscv-rust"
version = "0.1.0"
authors = ["Jaic1 <506933131@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 2
lto = "off"

[dependencies]
bit_field = "=0.10.0"
bitflags = "=1.2.1"
array-macro = "=2.0.0"

[features]
unit_test = []
verbose_init_info = []
kernel_warning = []
trace_syscall = []